vertiport_detect/detecting_vertiport_ws/log/build_2025-05-27_21-47-21/cv_control_for_landing/stdout_stderr.log
running egg_info
creating ../../build/cv_control_for_landing/cv_control_for_landing.egg-info
writing ../../build/cv_control_for_landing/cv_control_for_landing.egg-info/PKG-INFO
writing dependency_links to ../../build/cv_control_for_landing/cv_control_for_landing.egg-info/dependency_links.txt
writing entry points to ../../build/cv_control_for_landing/cv_control_for_landing.egg-info/entry_points.txt
writing requirements to ../../build/cv_control_for_landing/cv_control_for_landing.egg-info/requires.txt
writing top-level names to ../../build/cv_control_for_landing/cv_control_for_landing.egg-info/top_level.txt
writing manifest file '../../build/cv_control_for_landing/cv_control_for_landing.egg-info/SOURCES.txt'
reading manifest file '../../build/cv_control_for_landing/cv_control_for_landing.egg-info/SOURCES.txt'
writing manifest file '../../build/cv_control_for_landing/cv_control_for_landing.egg-info/SOURCES.txt'
running build
running build_py
creating /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing
copying cv_control_for_landing/RealSenseCameraLauncher.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing
copying cv_control_for_landing/yolo_center_publisher.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing
copying cv_control_for_landing/realsense_viewer.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing
copying cv_control_for_landing/__init__.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing
copying cv_control_for_landing/vertiport_landing_control.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing
running install
running install_lib
creating /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing
copying /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing/RealSenseCameraLauncher.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing
copying /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing/yolo_center_publisher.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing
copying /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing/realsense_viewer.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing
copying /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing/__init__.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing
copying /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/build/lib/cv_control_for_landing/vertiport_landing_control.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing
byte-compiling /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing/RealSenseCameraLauncher.py to RealSenseCameraLauncher.cpython-310.pyc
byte-compiling /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing/yolo_center_publisher.py to yolo_center_publisher.cpython-310.pyc
  File "/home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing/yolo_center_publisher.py", line 78
    depth_value = self.latest_depth_image[cy, cx]  mm 단위
                                                   ^^
SyntaxError: invalid syntax

byte-compiling /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing/realsense_viewer.py to realsense_viewer.cpython-310.pyc
byte-compiling /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing/vertiport_landing_control.py to vertiport_landing_control.cpython-310.pyc
running install_data
creating /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/share/ament_index/resource_index/packages
copying resource/cv_control_for_landing -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/share/ament_index/resource_index/packages
copying package.xml -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/share/cv_control_for_landing
creating /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/share/cv_control_for_landing/launch
copying launch/realsense_launch.py -> /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/share/cv_control_for_landing/launch
running install_egg_info
Copying ../../build/cv_control_for_landing/cv_control_for_landing.egg-info to /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/python3.10/site-packages/cv_control_for_landing-0.0.0-py3.10.egg-info
running install_scripts
Installing realsense_viewer script to /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/cv_control_for_landing
Installing yolo_center_publisher script to /home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/install/cv_control_for_landing/lib/cv_control_for_landing
writing list of installed files to '/home/haechan/Repo_2025/machine_AI/cv_uav_control_for_landing/vertiport_detect/detecting_vertiport_ws/build/cv_control_for_landing/install.log'
